--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 		<body>
 		<h1>Indian Cricket Team</h1>
 		<img src="cricket.jpg" img width="50%">
-		
+		<u><p>Such a great team for the great country.</p></u>
 		</body>
 </html>
